<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        title="@string/pref_category_network_title">

        <EditTextPreference
            key="service_name"
            title="@string/pref_service_name_title"
            summary="@string/pref_service_name_summary"
            defaultValue="Wyoming Android TTS"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            key="service_port"
            title="@string/pref_service_port_title"
            summary="@string/pref_service_port_summary"
            defaultValue="10300"
            app:useSimpleSummaryProvider="true"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>
